Update pricing and services section

--- a/consulting.html
+++ b/consulting.html
@@ -469,155 +469,155 @@
                             <h4 class="mb-2 !font-black uppercase !text-white">What <span class="text-secondary">we do</span></h4>
                             <p class="text-lg">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                         </div>
+
+
                         <div class="mt-10 grid grid-cols-1 gap-[30px] sm:grid-cols-2 lg:grid-cols-3" data-aos="flip-left" data-aos-duration="1000">
+                            <!-- Optimisation et Maintenance Logicielle -->
                             <div class="group">
                                 <div class="overflow-hidden">
                                     <img
                                         src="assets/images/consulting/services1.jpg"
                                         class="w-full duration-200 group-hover:rotate-2 group-hover:scale-110"
-                                        alt=""
+                                        alt="Optimisation et Maintenance Logicielle"
                                     />
                                 </div>
                                 <div class="relative mx-4 -mt-10 space-y-2.5 bg-gray-dark px-4 pt-[22px] text-center dark:bg-black md:px-[26px]">
-                                    <h5 class="text-2xl font-bold text-primary group-hover:text-secondary">Tax Planning</h5>
+                                    <h5 class="text-2xl font-bold text-primary group-hover:text-secondary">Optimisation et Maintenance Logicielle</h5>
                                     <div class="mx-auto h-1 w-[50px] bg-secondary duration-200 group-hover:bg-primary"></div>
                                     <p class="pb-[60px] text-lg font-semibold">
-                                        It is a long established fact that a reader will be distracted by the readable content.
+                                        Améliorez les performances de votre PC avec nos services d'optimisation et de maintenance logicielle.
                                     </p>
                                     <span class="absolute bottom-0 opacity-20 ltr:right-0 rtl:left-0">
-                                        <img src="assets/images/consulting/services-icon1.svg" alt="" />
-                                    </span>
+                <img src="assets/images/consulting/services-icon1.svg" alt="Optimisation Icon" />
+            </span>
                                 </div>
                             </div>
+
+                            <!-- Interventions Matérielles Légères -->
                             <div class="group">
                                 <div class="overflow-hidden">
                                     <img
                                         src="assets/images/consulting/services2.jpg"
                                         class="w-full duration-200 group-hover:rotate-2 group-hover:scale-110"
-                                        alt=""
+                                        alt="Interventions Matérielles Légères"
                                     />
                                 </div>
                                 <div class="relative mx-4 -mt-10 space-y-2.5 bg-gray-dark px-4 pt-[22px] text-center dark:bg-black md:px-[26px]">
-                                    <h5 class="text-2xl font-bold text-primary group-hover:text-secondary">Business Planning</h5>
+                                    <h5 class="text-2xl font-bold text-primary group-hover:text-secondary">Interventions Matérielles Légères</h5>
                                     <div class="mx-auto h-1 w-[50px] bg-secondary duration-200 group-hover:bg-primary"></div>
                                     <p class="pb-[60px] text-lg font-semibold">
-                                        It is a long established fact that a reader will be distracted by the readable content.
+                                        Des solutions matérielles simples pour améliorer et réparer votre ordinateur sans équipement coûteux.
                                     </p>
                                     <span class="absolute bottom-0 opacity-20 ltr:right-0 rtl:left-0">
-                                        <img src="assets/images/consulting/services-icon2.svg" alt="" />
-                                    </span>
+                <img src="assets/images/consulting/services-icon2.svg" alt="Interventions Icon" />
+            </span>
                                 </div>
                             </div>
+
+                            <!-- Services Informatiques Avancés -->
                             <div class="group">
                                 <div class="overflow-hidden">
                                     <img
                                         src="assets/images/consulting/services3.jpg"
                                         class="w-full duration-200 group-hover:rotate-2 group-hover:scale-110"
-                                        alt=""
+                                        alt="Services Informatiques Avancés"
                                     />
                                 </div>
                                 <div class="relative mx-4 -mt-10 space-y-2.5 bg-gray-dark px-4 pt-[22px] text-center dark:bg-black md:px-[26px]">
-                                    <h5 class="text-2xl font-bold text-primary group-hover:text-secondary">Insutance & Family</h5>
+                                    <h5 class="text-2xl font-bold text-primary group-hover:text-secondary">Services Informatiques Avancés</h5>
                                     <div class="mx-auto h-1 w-[50px] bg-secondary duration-200 group-hover:bg-primary"></div>
                                     <p class="pb-[60px] text-lg font-semibold">
-                                        It is a long established fact that a reader will be distracted by the readable content.
+                                        Des services spécialisés pour répondre à vos besoins informatiques les plus complexes.
                                     </p>
                                     <span class="absolute bottom-0 opacity-20 ltr:right-0 rtl:left-0">
-                                        <img src="assets/images/consulting/services-icon3.svg" alt="" />
-                                    </span>
+                <img src="assets/images/consulting/services-icon3.svg" alt="Services Avancés Icon" />
+            </span>
                                 </div>
                             </div>
                         </div>
+
+
                     </div>
                 </section>
 
                 <section class="overflow-hidden py-12 lg:py-24">
                     <div class="container">
                         <div class="heading mb-8 text-center lg:mb-12">
-                            <h4 class="!font-black uppercase">Pricing <span class="text-primary">Plan</span></h4>
-                            <p class="mt-2 !text-lg !font-medium">Innovative solutions satisfied clients for tax consulting</p>
+                            <h4 class="!font-black uppercase">Mes <span class="text-primary">Prix</span></h4>
+                            <p class="mt-2 !text-lg !font-medium"></p>
                         </div>
-                        <div class="mb-5 flex justify-center space-x-4 text-center text-base font-semibold rtl:space-x-reverse md:mb-16">
-                            <span>Monthly</span>
-                            <label class="relative h-6 w-12">
-                                <input
-                                    id="custom_switch_checkbox1"
-                                    type="checkbox"
-                                    class="custom_switch peer absolute top-0 z-10 h-full w-full cursor-pointer opacity-0 ltr:left-0 rtl:right-0"
-                                    x-model="yearlyPrice"
-                                />
-                                <span
-                                    for="custom_switch_checkbox1"
-                                    class="outline_checkbox bg-icon dark:border-white-dark dark:before:bg-white-dark block h-full rounded-full border-2 border-gray before:absolute before:bottom-1 before:h-4 before:w-4 before:rounded-full before:bg-gray before:bg-[url(/assets/images/consulting/close.svg)] before:bg-center before:bg-no-repeat before:transition-all before:duration-300 peer-checked:border-primary peer-checked:before:bg-primary peer-checked:before:bg-[url(/assets/images/consulting/checked.svg)] ltr:before:left-1 ltr:peer-checked:before:left-7 rtl:before:right-1 rtl:peer-checked:before:right-7"
-                                ></span>
-                            </label>
-                            <span>Yearly</span>
-                        </div>
+
                         <div class="mt-10 grid grid-cols-1 gap-5 sm:grid-cols-2 sm:gap-0 lg:mt-16 lg:grid-cols-3">
+                            <!-- Offre spéciale pour l'optimisation des PC lents -->
                             <div
                                 class="flex flex-col rounded-l-[4px] border border-gray/30 bg-white p-8 dark:bg-white/[0.05]"
                                 data-aos="fade-up"
                                 data-aos-duration="1000"
                             >
-                                <h5 class="text-xl font-semibold text-black dark:text-white">Premium</h5>
-                                <p class="mt-6 text-sm font-normal">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                <h5 class="text-xl font-semibold text-black dark:text-white">Optimisation PC Lent</h5>
+                                <p class="mt-6 text-sm font-normal">Améliorez les performances de votre PC avec notre service d'optimisation.</p>
                                 <h3 class="mt-[38px] text-center text-3xl font-bold text-black dark:text-white">
-                                    $25 <span class="text-lg font-normal">/ monthly</span>
+                                    20€ <span class="text-lg font-normal">/ intervention</span>
                                 </h3>
-                                <p class="mt-[38px] text-[15px] font-bold text-black dark:text-white">Cloud Hosting Features</p>
+                                <p class="mt-[38px] text-[15px] font-bold text-black dark:text-white">Ce service inclut :</p>
                                 <ul class="mt-2.5 mb-5 space-y-2.5">
-                                    <li>Single Domain</li>
-                                    <li>50 GB SSD</li>
-                                    <li>1 TB Premium Bandwidth</li>
+                                    <li>Nettoyage des fichiers temporaires</li>
+                                    <li>Désactivation des programmes et services inutiles</li>
+                                    <li>Optimisation des paramètres système</li>
                                 </ul>
                                 <button type="button" class="mt-auto w-full rounded-md bg-gray py-4 uppercase text-white duration-200 hover:bg-primary">
-                                    Get a Free Consulting
+                                    Profitez de l'offre
                                 </button>
                             </div>
+
+                            <!-- Tarification horaire standard -->
                             <div
                                 class="relative mt-5 flex flex-col border border-gray/30 bg-white p-8 dark:bg-white/[0.05] sm:mt-0 lg:border-x-0 lg:border-y"
                                 data-aos="fade-up"
                                 data-aos-duration="1000"
                             >
                                 <p class="absolute inset-x-0 -top-6 w-full rounded-t-[6px] bg-secondary py-2.5 text-center font-bold text-white">
-                                    Most Popular
+                                    Tarif Horaire
                                 </p>
-                                <h5 class="text-xl font-semibold text-black dark:text-white">Plus</h5>
-                                <p class="mt-6 text-sm font-normal">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                <h5 class="text-xl font-semibold text-black dark:text-white">Intervention Standard</h5>
+                                <p class="mt-6 text-sm font-normal">Pour tous vos besoins en réparation et maintenance informatique.</p>
                                 <h3 class="mt-[38px] text-center text-3xl font-bold text-secondary">
-                                    $70 <span class="text-lg font-normal text-black dark:text-white">/ monthly</span>
+                                    25€ <span class="text-lg font-normal text-black dark:text-white">/ heure</span>
                                 </h3>
-                                <p class="mt-[38px] text-[15px] font-bold text-black dark:text-white">VPS Hosting Features</p>
+                                <p class="mt-[38px] text-[15px] font-bold text-black dark:text-white">Exemples de services :</p>
                                 <ul class="mt-2.5 mb-5 space-y-2.5">
-                                    <li>5 Domains</li>
-                                    <li>100 GB SSD</li>
-                                    <li>2 TB Premium Bandwidth</li>
+                                    <li>Réinstallation de Windows</li>
+                                    <li>Suppression de virus et malwares</li>
+                                    <li>Installation de logiciels</li>
                                 </ul>
                                 <button type="button" class="mt-auto w-full rounded-md bg-secondary py-4 uppercase text-white duration-200 hover:bg-primary">
-                                    Get a Free Consulting
+                                    Prendre rendez-vous
                                 </button>
                             </div>
+
+                            <!-- Service de diagnostic gratuit -->
                             <div
                                 class="flex flex-col rounded-r-[4px] border border-gray/30 bg-white p-8 dark:bg-white/[0.05]"
                                 data-aos="fade-up"
                                 data-aos-duration="1000"
                             >
-                                <h5 class="text-xl font-semibold text-black dark:text-white">Business</h5>
-                                <p class="mt-6 text-sm font-normal">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                <h5 class="text-xl font-semibold text-black dark:text-white">Diagnostic Gratuit</h5>
+                                <p class="mt-6 text-sm font-normal">Identifiez les problèmes de votre PC sans frais.</p>
                                 <h3 class="mt-[38px] text-center text-3xl font-bold text-black dark:text-white">
-                                    $115 <span class="text-lg font-normal">/ monthly</span>
+                                    0€ <span class="text-lg font-normal">/ diagnostic</span>
                                 </h3>
-                                <p class="mt-[38px] text-[15px] font-bold text-black dark:text-white">Business Hosting Features</p>
+                                <p class="mt-[38px] text-[15px] font-bold text-black dark:text-white">Ce service inclut :</p>
                                 <ul class="mt-2.5 mb-5 space-y-2.5">
-                                    <li>Unlimited Domains</li>
-                                    <li>1 TB SSD</li>
-                                    <li>5 TB Premium Bandwidth</li>
+                                    <li>Analyse complète du système</li>
+                                    <li>Rapport détaillé des problèmes détectés</li>
+                                    <li>Recommandations pour les réparations nécessaires</li>
                                 </ul>
                                 <button type="button" class="mt-auto w-full rounded-md bg-gray py-4 uppercase text-white duration-200 hover:bg-primary">
-                                    Get a Free Consulting
+                                    Obtenir un diagnostic
                                 </button>
                             </div>
                         </div>
+
                     </div>
                 </section>
 
