add new picto for slide part

--- a/consulting.html
+++ b/consulting.html
@@ -421,25 +421,26 @@
                     <div class="swiper industry-slider">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <a href="javascript:"><img src="assets/images/logo-1.svg" alt="" class="mx-auto transition hover:scale-110" /></a>
+                                <a href="javascript:"><img src="assets/images/repapc/picto-slide/suppressionvirus.svg" alt="" class="mx-auto transition hover:scale-110 w-64 h-64" /></a>
+                            </div>
+
+                            <div class="swiper-slide">
+                                <a href="javascript:"><img src="assets/images/repapc/picto-slide/changement-disque-dur.svg" alt="" class="mx-auto transition hover:scale-110 w-64 h-64" /></a>
                             </div>
                             <div class="swiper-slide">
-                                <a href="javascript:"><img src="assets/images/logo-2.svg" alt="" class="mx-auto transition hover:scale-110" /></a>
+                                <a href="javascript:"><img src="assets/images/repapc/picto-slide/entretien-preventif.svg" alt="" class="mx-auto transition hover:scale-110 w-64 h-64" /></a>
                             </div>
                             <div class="swiper-slide">
-                                <a href="javascript:"><img src="assets/images/logo-3.svg" alt="" class="mx-auto transition hover:scale-110" /></a>
+                                <a href="javascript:"><img src="assets/images/repapc/picto-slide/formation-numerique.svg" alt="" class="mx-auto transition hover:scale-110 w-64 h-64" /></a>
                             </div>
                             <div class="swiper-slide">
-                                <a href="javascript:"><img src="assets/images/logo-4.svg" alt="" class="mx-auto transition hover:scale-110" /></a>
+                                <a href="javascript:"><img src="assets/images/repapc/picto-slide/recuperation-de-donnees.svg" alt="" class="mx-auto transition hover:scale-110 w-64 h-64" /></a>
                             </div>
                             <div class="swiper-slide">
-                                <a href="javascript:"><img src="assets/images/logo-5.svg" alt="" class="mx-auto transition hover:scale-110" /></a>
+                                <a href="javascript:"><img src="assets/images/repapc/picto-slide/installation-systeme.svg" alt="" class="mx-auto transition hover:scale-110 w-64 h-64" /></a>
                             </div>
                             <div class="swiper-slide">
-                                <a href="javascript:"><img src="assets/images/logo-6.svg" alt="" class="mx-auto transition hover:scale-110" /></a>
-                            </div>
-                            <div class="swiper-slide">
-                                <a href="javascript:"><img src="assets/images/logo-7.svg" alt="" class="mx-auto transition hover:scale-110" /></a>
+                                <a href="javascript:"><img src="assets/images/repapc/picto-slide/ordinateur-portable.svg" alt="" class="mx-auto transition hover:scale-110 w-64 h-64" /></a>
                             </div>
                         </div>
                     </div>
