--- a/consulting.html
+++ b/consulting.html
@@ -896,88 +896,204 @@
         </section>
 
 
-        <section
-            class="bg-black bg-[url(../images/consulting/business-img.png)] bg-cover bg-center bg-no-repeat py-12 lg:py-24">
+<!--        <section-->
+<!--            class="bg-black bg-[url(../images/consulting/business-img.png)] bg-cover bg-center bg-no-repeat py-12 lg:py-24">-->
+<!--            <div class="container">-->
+<!--                <div-->
+<!--                    class="grid grid-cols-1 gap-12 text-center lg:grid-cols-2 lg:gap-20 ltr:lg:text-left rtl:lg:text-right">-->
+<!--                    <div>-->
+<!--                        <h3 class="text-3xl font-black uppercase text-white sm:text-[40px] sm:leading-[50px]">-->
+<!--                            We Help <span class="text-primary">Growing Business</span>-->
+<!--                        </h3>-->
+<!--                        <p class="mt-[18px] text-lg">-->
+<!--                            We help managing asset, provide financial advise. leave money issue with us and focus on-->
+<!--                            your core business.-->
+<!--                        </p>-->
+<!--                        <div class="mt-[18px] flex justify-center gap-6 lg:justify-start">-->
+<!--                            <div>-->
+<!--                                <a-->
+<!--                                    href="contact-us.html"-->
+<!--                                    class="btn rounded-md bg-secondary text-white shadow-[10px_15px_30px_rgba(199,128,161,0.2)] hover:bg-primary"-->
+<!--                                >Contact us</a-->
+<!--                                >-->
+<!--                            </div>-->
+<!--                            <button type="button" data-fancybox data-src="#business-video"-->
+<!--                                    class="group flex items-center gap-2.5">-->
+<!--                                        <span>-->
+<!--                                            <svg width="30" height="30" viewBox="0 0 30 30" fill="none"-->
+<!--                                                 xmlns="http://www.w3.org/2000/svg">-->
+<!--                                                <path-->
+<!--                                                    d="M15 27.5C21.9036 27.5 27.5 21.9036 27.5 15C27.5 8.09644 21.9036 2.5 15 2.5"-->
+<!--                                                    stroke="#47BDFF"-->
+<!--                                                    stroke-width="2"-->
+<!--                                                    stroke-linecap="round"-->
+<!--                                                />-->
+<!--                                                <path-->
+<!--                                                    d="M15 27.5C8.09644 27.5 2.5 21.9036 2.5 15C2.5 8.09644 8.09644 2.5 15 2.5"-->
+<!--                                                    stroke="#47BDFF"-->
+<!--                                                    stroke-width="2"-->
+<!--                                                    stroke-linecap="round"-->
+<!--                                                    stroke-dasharray="4 3"-->
+<!--                                                />-->
+<!--                                                <path-->
+<!--                                                    d="M17.3595 12.4185C18.7032 13.5146 19.375 14.0626 19.375 15C19.375 15.9374 18.7032 16.4854 17.3595 17.5815C16.9886 17.8841 16.6207 18.169 16.2826 18.4064C15.9861 18.6146 15.6502 18.83 15.3024 19.0415C13.9619 19.8567 13.2917 20.2643 12.6905 19.813C12.0894 19.3617 12.0347 18.4171 11.9255 16.5277C11.8946 15.9934 11.875 15.4696 11.875 15C11.875 14.5304 11.8946 14.0066 11.9255 13.4723C12.0347 11.5829 12.0894 10.6383 12.6905 10.187C13.2917 9.73574 13.9619 10.1433 15.3024 10.9585C15.6502 11.17 15.9861 11.3854 16.2826 11.5936C16.6207 11.831 16.9886 12.1159 17.3595 12.4185Z"-->
+<!--                                                    stroke="#47BDFF"-->
+<!--                                                    stroke-width="2"-->
+<!--                                                />-->
+<!--                                            </svg>-->
+<!--                                        </span>-->
+<!--                                <span-->
+<!--                                    class="uppercase text-white duration-200 group-hover:text-primary">Watch Videos</span>-->
+<!--                            </button>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="grid grid-cols-2 items-center gap-3 sm:gap-7" data-aos="flip-left"-->
+<!--                         data-aos-duration="1000">-->
+<!--                        <div-->
+<!--                            class="border border-transparent bg-gray/20 py-10 px-5 text-center duration-200 hover:border-secondary sm:py-[52px]">-->
+<!--                            <h3-->
+<!--                                class="text-[34px] font-black text-white"-->
+<!--                                data-vanilla-counter-->
+<!--                                data-start-at="0"-->
+<!--                                data-end-at="100"-->
+<!--                                data-time="4000"-->
+<!--                                data-delay="1000"-->
+<!--                                data-format="{}+"-->
+<!--                            >-->
+<!--                                100+-->
+<!--                            </h3>-->
+<!--                            <p class="mt-2.5 font-bold">Satisfied customers</p>-->
+<!--                        </div>-->
+<!--                        <div-->
+<!--                            class="border border-transparent bg-gray/20 py-10 px-5 text-center duration-200 hover:border-secondary sm:py-[52px]">-->
+<!--                            <h3-->
+<!--                                class="text-[34px] font-black text-white"-->
+<!--                                data-vanilla-counter-->
+<!--                                data-start-at="0"-->
+<!--                                data-end-at="12"-->
+<!--                                data-time="4000"-->
+<!--                                data-delay="1000"-->
+<!--                                data-format="{}+"-->
+<!--                            >-->
+<!--                                12+-->
+<!--                            </h3>-->
+<!--                            <p class="mt-2.5 font-bold">Years project experince</p>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </section>-->
+
+        <section class="bg-black bg-[url(../images/consulting/business-img.png)] bg-cover bg-center bg-no-repeat py-12 lg:py-24">
             <div class="container">
                 <div
                     class="grid grid-cols-1 gap-12 text-center lg:grid-cols-2 lg:gap-20 ltr:lg:text-left rtl:lg:text-right">
                     <div>
                         <h3 class="text-3xl font-black uppercase text-white sm:text-[40px] sm:leading-[50px]">
-                            We Help <span class="text-primary">Growing Business</span>
+                            Réparation <span class="text-primary">PC & Ordinateurs</span> pour Particuliers
                         </h3>
-                        <p class="mt-[18px] text-lg">
-                            We help managing asset, provide financial advise. leave money issue with us and focus on
-                            your core business.
+                        <p class="mt-[18px] text-lg text-gray-300">
+                            Spécialiste en réparation d'ordinateurs fixes et portables. Nous redonnons vie à votre PC
+                            avec des solutions rapides et durables. Service personnalisé à domicile ou en atelier.
                         </p>
-                        <div class="mt-[18px] flex justify-center gap-6 lg:justify-start">
-                            <div>
-                                <a
-                                    href="contact-us.html"
-                                    class="btn rounded-md bg-secondary text-white shadow-[10px_15px_30px_rgba(199,128,161,0.2)] hover:bg-primary"
-                                >Contact us</a
-                                >
-                            </div>
-                            <button type="button" data-fancybox data-src="#business-video"
-                                    class="group flex items-center gap-2.5">
-                                        <span>
-                                            <svg width="30" height="30" viewBox="0 0 30 30" fill="none"
-                                                 xmlns="http://www.w3.org/2000/svg">
-                                                <path
-                                                    d="M15 27.5C21.9036 27.5 27.5 21.9036 27.5 15C27.5 8.09644 21.9036 2.5 15 2.5"
-                                                    stroke="#47BDFF"
-                                                    stroke-width="2"
-                                                    stroke-linecap="round"
-                                                />
-                                                <path
-                                                    d="M15 27.5C8.09644 27.5 2.5 21.9036 2.5 15C2.5 8.09644 8.09644 2.5 15 2.5"
-                                                    stroke="#47BDFF"
-                                                    stroke-width="2"
-                                                    stroke-linecap="round"
-                                                    stroke-dasharray="4 3"
-                                                />
-                                                <path
-                                                    d="M17.3595 12.4185C18.7032 13.5146 19.375 14.0626 19.375 15C19.375 15.9374 18.7032 16.4854 17.3595 17.5815C16.9886 17.8841 16.6207 18.169 16.2826 18.4064C15.9861 18.6146 15.6502 18.83 15.3024 19.0415C13.9619 19.8567 13.2917 20.2643 12.6905 19.813C12.0894 19.3617 12.0347 18.4171 11.9255 16.5277C11.8946 15.9934 11.875 15.4696 11.875 15C11.875 14.5304 11.8946 14.0066 11.9255 13.4723C12.0347 11.5829 12.0894 10.6383 12.6905 10.187C13.2917 9.73574 13.9619 10.1433 15.3024 10.9585C15.6502 11.17 15.9861 11.3854 16.2826 11.5936C16.6207 11.831 16.9886 12.1159 17.3595 12.4185Z"
-                                                    stroke="#47BDFF"
-                                                    stroke-width="2"
-                                                />
-                                            </svg>
-                                        </span>
-                                <span
-                                    class="uppercase text-white duration-200 group-hover:text-primary">Watch Videos</span>
-                            </button>
+                        <ul class="mt-6 space-y-3 text-left">
+                            <li class="flex items-center gap-3">
+                        <span class="flex h-5 w-5 items-center justify-center rounded-full bg-primary">
+                            <svg class="h-3 w-3 text-white" fill="currentColor" viewBox="0 0 20 20">
+                                <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path>
+                            </svg>
+                        </span>
+                                <span class="text-gray-300">Diagnostic PC gratuit et détaillé</span>
+                            </li>
+                            <li class="flex items-center gap-3">
+                        <span class="flex h-5 w-5 items-center justify-center rounded-full bg-primary">
+                            <svg class="h-3 w-3 text-white" fill="currentColor" viewBox="0 0 20 20">
+                                <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path>
+                            </svg>
+                        </span>
+                                <span class="text-gray-300">Intervention à domicile possible</span>
+                            </li>
+                            <li class="flex items-center gap-3">
+                        <span class="flex h-5 w-5 items-center justify-center rounded-full bg-primary">
+                            <svg class="h-3 w-3 text-white" fill="currentColor" viewBox="0 0 20 20">
+                                <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path>
+                            </svg>
+                        </span>
+                                <span class="text-gray-300">Maintenance préventive</span>
+                            </li>
+                        </ul>
+                        <div class="mt-8 flex flex-col sm:flex-row justify-center gap-4 lg:justify-start">
+                            <a
+                                href="contact-us.html"
+                                class="btn rounded-md bg-secondary text-white shadow-[10px_15px_30px_rgba(199,128,161,0.2)] hover:bg-primary transition-all duration-300"
+                            >Contactez-nous</a>
+                            <a
+                                href="#services"
+                                class="btn rounded-md border-2 border-primary text-primary bg-transparent hover:bg-primary hover:text-white transition-all duration-300"
+                            >Nos Services</a>
                         </div>
                     </div>
                     <div class="grid grid-cols-2 items-center gap-3 sm:gap-7" data-aos="flip-left"
                          data-aos-duration="1000">
                         <div
-                            class="border border-transparent bg-gray/20 py-10 px-5 text-center duration-200 hover:border-secondary sm:py-[52px]">
+                            class="border border-transparent bg-gray/20 py-10 px-5 text-center duration-200 hover:border-secondary hover:bg-gray/30 transition-all sm:py-[52px]">
                             <h3
                                 class="text-[34px] font-black text-white"
                                 data-vanilla-counter
                                 data-start-at="0"
-                                data-end-at="100"
+                                data-end-at="500"
                                 data-time="4000"
                                 data-delay="1000"
                                 data-format="{}+"
                             >
-                                100+
+                                500+
                             </h3>
-                            <p class="mt-2.5 font-bold">Satisfied customers</p>
+                            <p class="mt-2.5 font-bold text-gray-300">Clients satisfaits</p>
                         </div>
                         <div
-                            class="border border-transparent bg-gray/20 py-10 px-5 text-center duration-200 hover:border-secondary sm:py-[52px]">
+                            class="border border-transparent bg-gray/20 py-10 px-5 text-center duration-200 hover:border-secondary hover:bg-gray/30 transition-all sm:py-[52px]">
                             <h3
                                 class="text-[34px] font-black text-white"
                                 data-vanilla-counter
                                 data-start-at="0"
-                                data-end-at="12"
+                                data-end-at="15"
                                 data-time="4000"
                                 data-delay="1000"
                                 data-format="{}+"
                             >
-                                12+
+                                15+
                             </h3>
-                            <p class="mt-2.5 font-bold">Years project experince</p>
+                            <p class="mt-2.5 font-bold text-gray-300">Années d'expérience</p>
+                        </div>
+                        <div
+                            class="border border-transparent bg-gray/20 py-10 px-5 text-center duration-200 hover:border-secondary hover:bg-gray/30 transition-all sm:py-[52px]">
+                            <h3
+                                class="text-[34px] font-black text-white"
+                                data-vanilla-counter
+                                data-start-at="0"
+                                data-end-at="98"
+                                data-time="4000"
+                                data-delay="1500"
+                                data-format="{}%"
+                            >
+                                98%
+                            </h3>
+                            <p class="mt-2.5 font-bold text-gray-300">Taux de réussite</p>
+                        </div>
+                        <div
+                            class="border border-transparent bg-gray/20 py-10 px-5 text-center duration-200 hover:border-secondary hover:bg-gray/30 transition-all sm:py-[52px]">
+                            <h3
+                                class="text-[34px] font-black text-white"
+                                data-vanilla-counter
+                                data-start-at="0"
+                                data-end-at="7"
+                                data-time="4000"
+                                data-delay="1500"
+                                data-format="{}/7"
+                            >
+                                7/7
+                            </h3>
+                            <p class="mt-2.5 font-bold text-gray-300">Support client</p>
                         </div>
                     </div>
                 </div>
