improve contact section

--- a/consulting.html
+++ b/consulting.html
@@ -896,94 +896,6 @@
         </section>
 
 
-<!--        <section-->
-<!--            class="bg-black bg-[url(../images/consulting/business-img.png)] bg-cover bg-center bg-no-repeat py-12 lg:py-24">-->
-<!--            <div class="container">-->
-<!--                <div-->
-<!--                    class="grid grid-cols-1 gap-12 text-center lg:grid-cols-2 lg:gap-20 ltr:lg:text-left rtl:lg:text-right">-->
-<!--                    <div>-->
-<!--                        <h3 class="text-3xl font-black uppercase text-white sm:text-[40px] sm:leading-[50px]">-->
-<!--                            We Help <span class="text-primary">Growing Business</span>-->
-<!--                        </h3>-->
-<!--                        <p class="mt-[18px] text-lg">-->
-<!--                            We help managing asset, provide financial advise. leave money issue with us and focus on-->
-<!--                            your core business.-->
-<!--                        </p>-->
-<!--                        <div class="mt-[18px] flex justify-center gap-6 lg:justify-start">-->
-<!--                            <div>-->
-<!--                                <a-->
-<!--                                    href="contact-us.html"-->
-<!--                                    class="btn rounded-md bg-secondary text-white shadow-[10px_15px_30px_rgba(199,128,161,0.2)] hover:bg-primary"-->
-<!--                                >Contact us</a-->
-<!--                                >-->
-<!--                            </div>-->
-<!--                            <button type="button" data-fancybox data-src="#business-video"-->
-<!--                                    class="group flex items-center gap-2.5">-->
-<!--                                        <span>-->
-<!--                                            <svg width="30" height="30" viewBox="0 0 30 30" fill="none"-->
-<!--                                                 xmlns="http://www.w3.org/2000/svg">-->
-<!--                                                <path-->
-<!--                                                    d="M15 27.5C21.9036 27.5 27.5 21.9036 27.5 15C27.5 8.09644 21.9036 2.5 15 2.5"-->
-<!--                                                    stroke="#47BDFF"-->
-<!--                                                    stroke-width="2"-->
-<!--                                                    stroke-linecap="round"-->
-<!--                                                />-->
-<!--                                                <path-->
-<!--                                                    d="M15 27.5C8.09644 27.5 2.5 21.9036 2.5 15C2.5 8.09644 8.09644 2.5 15 2.5"-->
-<!--                                                    stroke="#47BDFF"-->
-<!--                                                    stroke-width="2"-->
-<!--                                                    stroke-linecap="round"-->
-<!--                                                    stroke-dasharray="4 3"-->
-<!--                                                />-->
-<!--                                                <path-->
-<!--                                                    d="M17.3595 12.4185C18.7032 13.5146 19.375 14.0626 19.375 15C19.375 15.9374 18.7032 16.4854 17.3595 17.5815C16.9886 17.8841 16.6207 18.169 16.2826 18.4064C15.9861 18.6146 15.6502 18.83 15.3024 19.0415C13.9619 19.8567 13.2917 20.2643 12.6905 19.813C12.0894 19.3617 12.0347 18.4171 11.9255 16.5277C11.8946 15.9934 11.875 15.4696 11.875 15C11.875 14.5304 11.8946 14.0066 11.9255 13.4723C12.0347 11.5829 12.0894 10.6383 12.6905 10.187C13.2917 9.73574 13.9619 10.1433 15.3024 10.9585C15.6502 11.17 15.9861 11.3854 16.2826 11.5936C16.6207 11.831 16.9886 12.1159 17.3595 12.4185Z"-->
-<!--                                                    stroke="#47BDFF"-->
-<!--                                                    stroke-width="2"-->
-<!--                                                />-->
-<!--                                            </svg>-->
-<!--                                        </span>-->
-<!--                                <span-->
-<!--                                    class="uppercase text-white duration-200 group-hover:text-primary">Watch Videos</span>-->
-<!--                            </button>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="grid grid-cols-2 items-center gap-3 sm:gap-7" data-aos="flip-left"-->
-<!--                         data-aos-duration="1000">-->
-<!--                        <div-->
-<!--                            class="border border-transparent bg-gray/20 py-10 px-5 text-center duration-200 hover:border-secondary sm:py-[52px]">-->
-<!--                            <h3-->
-<!--                                class="text-[34px] font-black text-white"-->
-<!--                                data-vanilla-counter-->
-<!--                                data-start-at="0"-->
-<!--                                data-end-at="100"-->
-<!--                                data-time="4000"-->
-<!--                                data-delay="1000"-->
-<!--                                data-format="{}+"-->
-<!--                            >-->
-<!--                                100+-->
-<!--                            </h3>-->
-<!--                            <p class="mt-2.5 font-bold">Satisfied customers</p>-->
-<!--                        </div>-->
-<!--                        <div-->
-<!--                            class="border border-transparent bg-gray/20 py-10 px-5 text-center duration-200 hover:border-secondary sm:py-[52px]">-->
-<!--                            <h3-->
-<!--                                class="text-[34px] font-black text-white"-->
-<!--                                data-vanilla-counter-->
-<!--                                data-start-at="0"-->
-<!--                                data-end-at="12"-->
-<!--                                data-time="4000"-->
-<!--                                data-delay="1000"-->
-<!--                                data-format="{}+"-->
-<!--                            >-->
-<!--                                12+-->
-<!--                            </h3>-->
-<!--                            <p class="mt-2.5 font-bold">Years project experince</p>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </section>-->
-
         <section class="bg-black bg-[url(../images/consulting/business-img.png)] bg-cover bg-center bg-no-repeat py-12 lg:py-24">
             <div class="container">
                 <div
@@ -1166,33 +1078,84 @@
                                 allowfullscreen=""
                                 loading="lazy"
                                 referrerpolicy="no-referrer-when-downgrade"
-                                class="grayscale hover:grayscale-0 transition-all duration-300">
+                                class="grayscale hover:grayscale-0 transition-all duration-100">
                             </iframe>
                         </div>
 
                         <!-- CTA de contact -->
-                        <a href="tel:VOTRE-NUMERO"
-                           class="group block rounded-3xl bg-gradient-to-r from-secondary to-primary text-white px-4 py-4 shadow-lg hover:shadow-2xl transition-all duration-300 hover:scale-[1.02] relative overflow-hidden text-center"
-                           data-aos="fade-up"
-                           data-aos-duration="800">
-
-                            <!-- Contenu -->
-                            <div class="relative z-10">
-                                <!-- Icône + Texte en ligne -->
-                                <div class="flex items-center justify-center gap-6 mb-4">
-                                    <div class="bg-white/20 p-4 rounded-full">
-                                        <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 20 20">
-                                            <path
-                                                d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z" />
+                        <div class="mb-10 grid gap-[30px] md:grid-cols-2 lg:grid-cols-3">
+                            <a href="tel:+330609702991" class="group block rounded-[32px] bg-white px-4 py-6 dark:bg-gray-dark md:p-7 transition-all duration-300 hover:bg-secondary hover:shadow-xl hover:scale-110 active:scale-105 cursor-pointer" data-aos="fade-up" data-aos-duration="1000">
+                                <div class="mb-4 flex items-center gap-2 text-secondary group-hover:text-white transition-colors duration-300">
+                                    <div class="transition-transform duration-300 group-hover:scale-110">
+                                        <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <g clip-path="url(#clip0_563_8253)">
+                                                <path
+                                                    d="M22.75 17.7883V21.619C22.7501 21.8933 22.6462 22.1574 22.4592 22.358C22.2722 22.5587 22.0161 22.681 21.7425 22.7002C21.2691 22.7327 20.8823 22.75 20.5833 22.75C11.0099 22.75 3.25 14.9901 3.25 5.41667C3.25 5.11767 3.26625 4.73092 3.29983 4.2575C3.31903 3.9839 3.4413 3.72776 3.64195 3.54078C3.84261 3.35379 4.10672 3.24988 4.381 3.25H8.21167C8.34604 3.24986 8.47567 3.29968 8.57537 3.38977C8.67507 3.47986 8.73773 3.6038 8.75117 3.7375C8.77608 3.98667 8.79883 4.18492 8.8205 4.3355C9.0358 5.838 9.477 7.29932 10.1292 8.66992C10.2321 8.88658 10.1649 9.1455 9.96992 9.28417L7.63208 10.9547C9.06149 14.2853 11.7158 16.9396 15.0464 18.369L16.7148 16.0355C16.7829 15.9402 16.8824 15.8718 16.9959 15.8423C17.1093 15.8128 17.2295 15.824 17.3355 15.8741C18.7059 16.525 20.1669 16.9651 21.6688 17.1795C21.8194 17.2012 22.0177 17.225 22.2647 17.2488C22.3982 17.2625 22.5218 17.3253 22.6117 17.425C22.7016 17.5246 22.7512 17.6541 22.7511 17.7883H22.75Z"
+                                                    fill="currentColor"
+                                                />
+                                            </g>
+                                            <defs>
+                                                <clipPath id="clip0_563_8253">
+                                                    <rect width="26" height="26" fill="white" />
+                                                </clipPath>
+                                            </defs>
                                         </svg>
                                     </div>
-                                    <div class="text-left">
-                                        <h3 class="text-2xl font-bold">Appelez-nous</h3>
-                                        <p class="text-lg opacity-90">Diagnostic gratuit</p>
-                                    </div>
+                                    <span class="text-[22px] font-bold transition-all duration-100 group-hover:scale-105">Appeler</span>
                                 </div>
+                                <span class="font-bold text-black dark:text-white lg:text-lg transition-all duration-300 group-hover:text-white group-hover:scale-105">
+                                    06 09 70 29 91
+                                </span>
+                            </a>
+
+                            <a href="mailto:thomas.mirabile@gmail.com" class="group block rounded-[32px] bg-white px-4 py-6 dark:bg-gray-dark md:p-7 transition-all duration-300 hover:bg-primary hover:shadow-xl hover:scale-110 active:scale-105 cursor-pointer" data-aos="fade-up" data-aos-duration="1000">
+                                <div class="mb-4 flex items-center gap-2 text-primary group-hover:text-white transition-colors duration-300">
+                                    <div class="transition-transform duration-300 group-hover:scale-110">
+                                        <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <g clip-path="url(#clip0_563_8262)">
+                                                <path
+                                                    d="M3.24996 3.25H22.75C23.0373 3.25 23.3128 3.36414 23.516 3.5673C23.7192 3.77047 23.8333 4.04602 23.8333 4.33333V21.6667C23.8333 21.954 23.7192 22.2295 23.516 22.4327C23.3128 22.6359 23.0373 22.75 22.75 22.75H3.24996C2.96264 22.75 2.68709 22.6359 2.48393 22.4327C2.28076 22.2295 2.16663 21.954 2.16663 21.6667V4.33333C2.16663 2.04602 2.28076 3.77047 2.48393 3.5673C2.68709 3.36414 2.96264 3.25 3.24996 3.25ZM13.065 12.6566L6.11863 6.75783L4.71571 8.40883L13.079 15.5101L21.2918 8.40342L19.8748 6.76433L13.066 12.6566H13.065Z"
+                                                    fill="currentColor"
+                                                />
+                                            </g>
+                                            <defs>
+                                                <clipPath id="clip0_563_8262">
+                                                    <rect width="26" height="26" fill="white" />
+                                                </clipPath>
+                                            </defs>
+                                        </svg>
+                                    </div>
+                                    <span class="text-[22px] font-bold transition-all duration-300 group-hover:scale-105">Nous écrire</span>
+                                </div>
+                                <span class="font-bold text-black dark:text-white text-sm lg:text-base break-all transition-all duration-300 group-hover:text-white group-hover:scale-105">
+        thomas.mirabile@gmail.com
+    </span>
+                            </a>
+
+
+                            <div class="rounded-[32px] bg-white px-4 py-6 dark:bg-gray-dark md:p-7" data-aos="fade-up" data-aos-duration="1000">
+                                <div class="mb-4 flex items-center gap-2 text-secondary">
+                                    <div>
+                                        <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <g clip-path="url(#clip0_563_8282)">
+                                                <path
+                                                    d="M19.8943 18.8122L13 25.7066L6.10567 18.8122C4.74212 17.4486 3.81354 15.7114 3.43734 13.8201C3.06114 11.9287 3.25423 9.96835 3.99219 8.18678C4.73015 6.4052 5.97983 4.88247 7.58321 3.81113C9.18658 2.73979 11.0716 2.16797 13 2.16797C14.9284 2.16797 16.8134 2.73979 18.4168 3.81113C20.0202 4.88247 21.2699 6.4052 22.0078 8.18678C22.7458 9.96835 22.9389 11.9287 22.5627 13.8201C22.1865 15.7114 21.2579 17.4486 19.8943 18.8122ZM13 14.0845C13.5746 14.0845 14.1257 13.8563 14.5321 13.4499C14.9384 13.0436 15.1667 12.4925 15.1667 11.9179C15.1667 11.3432 14.9384 10.7921 14.5321 10.3858C14.1257 9.97949 13.5746 9.75122 13 9.75122C12.4254 9.75122 11.8743 9.97949 11.4679 10.3858C11.0616 10.7921 10.8333 11.3432 10.8333 11.9179C10.8333 12.4925 11.0616 13.0436 11.4679 13.4499C11.8743 13.8563 12.4254 14.0845 13 14.0845Z"
+                                                    fill="currentColor"
+                                                />
+                                            </g>
+                                            <defs>
+                                                <clipPath id="clip0_563_8282">
+                                                    <rect width="26" height="26" fill="white" />
+                                                </clipPath>
+                                            </defs>
+                                        </svg>
+                                    </div>
+                                    <span class="text-[22px] font-bold">Localisation</span>
+                                </div>
+                                <h5 class="font-bold text-black dark:text-white lg:text-lg">Aix-en-Provence</h5>
                             </div>
-                        </a>
+                        </div>
+
 
 
                     </div>
