rename consulting by index.html

--- a/nft.html
+++ b/nft.html
@@ -126,7 +126,7 @@
                                             <a href="nft.html" class="active">NFT Marketplace </a>
                                             <a href="online-courses.html"> Online Courses </a>
                                             <a href="restaurant.html"> Restaurant </a>
-                                            <a href="consulting.html"> Consulting </a>
+                                            <a href="index.html"> Consulting </a>
                                             <a href="creative-agency.html"> Creative Agency </a>
                                             <a href="insurance.html"> Insurance </a>
                                             <a href="photography.html"> Photography </a>
