--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -123,7 +123,7 @@
                                             <a href="nft.html">NFT Marketplace </a>
                                             <a href="online-courses.html"> Online Courses </a>
                                             <a href="restaurant.html"> Restaurant </a>
-                                            <a href="consulting.html"> Consulting </a>
+                                            <a href="index.html"> Consulting </a>
                                             <a href="creative-agency.html"> Creative Agency </a>
                                             <a href="insurance.html"> Insurance </a>
                                             <a href="photography.html"> Photography </a>
